--- a/package/package.json
+++ b/package/package.json
@@ -1,13 +1,13 @@
-{
-  "name": "hl7.iy.fhir.template",
-  "version": "0.0.1",
+﻿{
+  "name": "hl7.fhir.affiliate.template",
   "type": "fhir.template",
   "license": "CC0-1.0",
-  "description": "HL7 Illyria Template - for use with HL7 Illyria-published FHIR IGs",
-  "author": "http://github.com/hl7iy",
-  "canonical": "http://github.com/hl7/ig-template-affiliate",
+  "description": "HL7 affiliate FHIR ImplementationGuide Template",
+  "author": "http://hl7.eu",
+  "canonical": "http://fhir.org/templates/hl7.fhir.affiliate.template",
   "base": "fhir.base.template",
   "dependencies": {
     "fhir.base.template": "current"
-  }
+  },
+  "version": "0.1.0"
 }
